.provarCaches/00D6C0000000xA6UAI/objects/CCS_Batch_Class__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Batch Classes</relationshipLabel>
        <relationshipName>Batch_Classes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Course_Code__c</fullName>
        <description>SKU number</description>
        <label>Course Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_End_Date__c</fullName>
        <label>Course End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Course_Start_Date__c</fullName>
        <label>Course Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ILT_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ILT Class</label>
        <referenceTo>redwing__ILT_Class__c</referenceTo>
        <relationshipLabel>Batch Classes</relationshipLabel>
        <relationshipName>Batch_Classes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Students__c</fullName>
        <label>Number of Students</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offering_Id_Batch_Class__c</fullName>
        <label>Offering Id Batch Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <label>PO Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Site_Address__c</fullName>
        <label>Training Site Address</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Site_City__c</fullName>
        <label>Training Site City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Site_Name__c</fullName>
        <label>Training Site Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Site_State__c</fullName>
        <label>Training Site State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Site_Zip_Code__c</fullName>
        <label>Training Site Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Batch Class</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ILT_Class__c</columns>
        <columns>Offering_Id_Batch_Class__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Batch Identifier</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Batch Classes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>